k8s/mongo.svc.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  type: NodePort
  ports:
    - name: http
      port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    app: mongo
