k8s/xmjcraft.svc.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: xmjcraft
  labels:
    app: xmjcraft
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: xmjcraft
