k8s/xmjcraft.ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: xmjcraft
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
        - path: /xmjcraft(/|$)(.*)
          backend:
            serviceName: xmjcraft
            servicePort: 3000
